2007-06-27  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs, libsteticui/Application.cs,
	  libsteticui/ComponentType.cs: When reading the component list of a
	  library, get the target version.
	* libsteticui/ApplicationBackend.cs: Properly report an error when
	  dropping a widget of a class that doesn't exist.
	* libstetic/WidgetLibrary.cs, libstetic/DND.cs: Added null check.

2007-06-27  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* libstetic/WidgetLibrary.cs: Added handling of
	an empty objects.xml file.

2007-06-22  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs: When looking for widgets in a
	  library, ignore those without a palette category.
	* libsteticui/ApplicationBackend.cs: Added null check.
	* libsteticui/Application.cs: Don't try to load widgets from an
	  assembly if we know that's not a widget library.
	* libstetic/CustomWidget.cs: Add IntPtr constructor.
	* libstetic/EnumDescriptor.cs: Fix problem with the enum loading code,
	  which was not working when loading Gtk.SelectionMode, because it
	  has two members with the same value.
	* libstetic/wrapper/Container.cs: When dropping an object, look for
	  placeholders in all the child hierarchy, not only the direct
	  childs.

2007-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetEditSession.cs: Flickering fixes.
	* libsteticui/WidgetDesigner.cs: In BeginComponentDrag, don't take a
	  callback when the component type is known.

2007-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs, libsteticui/WidgetEditSession.cs,
	  libsteticui/WidgetDesigner.cs, libsteticui/PluggableWidget.cs,
	  libsteticui/Project.cs: Fixed flickering in widget designers caused
	  by project reloading. The new ProjectReloading event is fired
	  before the whole process reloading starts, and the designer takes a
	  'screenshot' of the old desiger, which is shown in place of the